Closed
Bug 970076
Opened 12 years ago
Closed 12 years ago
crash in libmm-color-convertor.so@0x66e
Categories
(Core :: Audio/Video, defect)
Tracking
()
VERIFIED
FIXED
mozilla30
People
(Reporter: kbrosnan, Assigned: eflores)
References
()
Details
(4 keywords, Whiteboard: [native-crash])
Crash Data
Attachments
(1 file)
|
1.32 KB,
patch
|
cajbir
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-6f045fd1-4533-43b0-b3d9-523a52140208.
=============================================================
Crash comments and URLs suggest Flash is involved. Only happens on Android 4.3 on devices using Qualcomm Adreno (TM) 225 and Qualcomm Adreno (TM) 320. AT&T, Verizon and Sprint versions of the Galaxy S3 are at the top of the list.
| Reporter | ||
Updated•12 years ago
|
Keywords: topcrash → topcrash-android-armv7
Updated•12 years ago
|
Comment 1•12 years ago
|
||
Does MV have any of those S3's?
Comment 2•12 years ago
|
||
My Sony Xperia Tablet Z (SGP311) is showing up on the device listing and I can reproduce.
Steps: play any MP4 on my test-page
http://people.mozilla.org/~atrain/mobile/tests/media.html
I'll try and get a stack from a debug build.
Keywords: reproducible
Comment 3•12 years ago
|
||
Here's an exact video where on play it crashes: http://people.mozilla.org/~atrain/mobile/tests/big-buck-high.mp4
Component: General → Video/Audio
Product: Firefox for Android → Core
Version: Firefox 29 → 28 Branch
Comment 4•12 years ago
|
||
As far as I can go without proper symbols
warning: Could not load shared library symbols for libOmxCore.so.
Do you need "set solib-search-path" or "set sysroot"?
warning: Could not load shared library symbols for libstagefright_soft_aacdec.so.
Do you need "set solib-search-path" or "set sysroot"?
warning: Could not load shared library symbols for libmm-color-convertor.so.
Do you need "set solib-search-path" or "set sysroot"?
warning: Could not load shared library symbols for libI420colorconvert.so.
Do you need "set solib-search-path" or "set sysroot"?
Program received signal SIGBUS, Bus error.
[Switching to Thread 17352]
0x854fb66e in ?? ()
(gdb) bt
#0 0x854fb66e in ?? ()
#1 0x854fb850 in ?? ()
#2 0x854fb850 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)
Updated•12 years ago
|
Flags: needinfo?(edwin)
Comment 5•12 years ago
|
||
Last good revision: 0d11fce4f845 (2013-12-16)
First bad revision: b1e5ade62913 (2013-12-17)
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=0d11fce4f845&tochange=b1e5ade62913
65adb5a76773 Edwin Flores — Bug 866080 - Use Android I420ColorConverter in OMX plugin r=sotaro,doublec
Blocks: 866080
Updated•12 years ago
|
Assignee: nobody → edwin
tracking-fennec: ? → 28+
| Assignee | ||
Comment 7•12 years ago
|
||
Android 4.2 introduced some relatively major changes in the way that Android
negotiates its output colour format. This was fixed on 4.4 KitKat in bug 953394.
This patch just lets Android versions 4.2 and 4.3 use the same fix.
| Assignee | ||
Updated•12 years ago
|
Attachment #8378055 -
Flags: review?(chris.double)
Updated•12 years ago
|
Attachment #8378055 -
Flags: review?(chris.double) → review+
| Reporter | ||
Comment 8•12 years ago
|
||
If this is reviewed can we land this on trunk soon? Would like to get this in to beta which has about 14 more days before the tree closes for release.
Flags: needinfo?(edwin)
| Assignee | ||
Comment 9•12 years ago
|
||
Flags: needinfo?(edwin)
Comment 10•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Updated•12 years ago
|
Comment 12•12 years ago
|
||
Can we get uplift nomination here so this can be in the next Beta?
Flags: needinfo?(edwin)
| Assignee | ||
Comment 13•12 years ago
|
||
Comment on attachment 8378055 [details] [diff] [review]
Set preferred video colour format for OMX on Android 4.2 and 4.3
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 953394.
User impact if declined: Android 4.2 and 4.3 devices with Qualcomm SoCs crashing.
Testing completed (on m-c, etc.): Has been on m-c for about a week.
Risk to taking this patch (and alternatives if risky): Minimal.
String or IDL/UUID changes made by this patch: None.
Attachment #8378055 -
Flags: approval-mozilla-beta?
Attachment #8378055 -
Flags: approval-mozilla-aurora?
Flags: needinfo?(edwin)
Comment 14•12 years ago
|
||
Comment on attachment 8378055 [details] [diff] [review]
Set preferred video colour format for OMX on Android 4.2 and 4.3
Approving also for beta (see comment #12 from Lukas)
Attachment #8378055 -
Flags: approval-mozilla-beta?
Attachment #8378055 -
Flags: approval-mozilla-beta+
Attachment #8378055 -
Flags: approval-mozilla-aurora?
Attachment #8378055 -
Flags: approval-mozilla-aurora+
Comment 15•12 years ago
|
||
Comment 16•12 years ago
|
||
Updated•12 years ago
|
status-b2g-v1.3:
--- → fixed
Updated•12 years ago
|
status-b2g-v1.3T:
--- → fixed
status-b2g-v1.4:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•