Bug 970076 - Set preferred video colour format for OMX on Android 4.2 and 4.3 r=doublec

Android 4.2 introduced some relatively major changes in the way that Android
negotiates its output colour format. This was fixed on 4.4 KitKat in bug 953394.
This patch just lets Android versions 4.2 and 4.3 use the same fix.